# jaankaup-engine

./: .gitignore  2  Cargo.toml  README.md  native_compile.sh  native_compile_debug.sh  wasm_compile.sh
algorithms/: Cargo.toml
algorithms/src/: histogram.rs  lib.rs  mc.rs  misc_functions.rs
assets/: font_visualizer.wgls
assets/models/: Cargo.toml
assets/models/src/: cube.rs
assets/shaders/: arrow_aabb.wgsl  char_preprocessor.wgsl  create_cells.wgsl  curves.wgsl  domain_test.wgsl  element_examples  fmm.wgsl  fmm2.wgsl  fmm_data_visualizer.wgsl  fmm_value_fixer.wgsl  fmm_value_fixer_wasm.wgsl  font_visualizer.wgsl  initial_band_points.wgsl  initial_fmm_block_generator.wgsl  mc_pc_data.wgsl  mc_with_3d_texture.wgsl  mc_with_3d_texture_wasm.wgsl  noise_to_buffer.wgsl  noise_to_buffer_wasm.wgsl  numbers.wgsl  pc_to_block_calculator.wgsl  pc_to_interface_fmm.wgsl  pc_to_interface_fmm_wasm.wgsl  point_cloud_to_interface.wgsl  prefix_scan.wgsl  radix_sort.wgsl  renderer_v3c1.wgsl  renderer_v3c1_x4.wgsl  renderer_v4n4.wgsl  renderer_v4n4_debug_visualizator.wgsl  renderer_v4n4_tex.wgsl  renderer_v4n4_wasm.wgsl  sphere_tracer.wgsl  sphere_tracer_renderer.wgsl  sphere_tracer_temp.wgsl  triangle_mesh_to_interface.wgsl  visualizer.wgsl  volumetric_tracer.wgsl
assets/shaders/fim_shaders/: collect_source_cells.wgsl  create_initial_active_cells.wgsl  dummy_fim.wgsl  pre_remedy.wgsl  remedy_phase.wgsl  remedy_step.wgsl  update_phase.wgsl
assets/shaders/fim_shaders/wasm/: create_initial_active_cells.wgsl  dummy_fim.wgsl  remedy_phase.wgsl  update_phase.wgsl
assets/shaders/fmm_shaders/: calculate_band_point_counts.wgsl  collect_band_points.wgsl  collect_cells.wgsl  collect_known_points.wgsl  create_initial_band_points.wgsl  fast_marching_method.wgsl  filter_active_blocks.wgsl  filter_active_blocks2.wgsl  filter_active_blocks_gather.wgsl  filter_active_blocks_sum_aux.wgsl  find_neighbors.wgsl  fmm_alg_visualizer.wgsl  reduce.wgsl  solve_quadratic.wgsl  solve_quadratic2.wgsl
assets/shaders/radix/: counting.wgsl
core/: Cargo.toml
core/src/: input.rs  lib.rs  template.rs
jaankaup_core/: Cargo.toml
jaankaup_core/src/: aabb.rs  buffer.rs  camera.rs  common_functions.rs  fast_iterative_method.rs  fast_marching_method.rs  fmm_things.rs  gpu_debugger.rs  gpu_timer.rs  histogram.rs  input.rs  lib.rs  misc.rs  model_loader.rs  pc_parser.rs  radix.rs  render_object.rs  render_things.rs  screen.rs  shaders.rs  sphere_tracer.rs  template.rs  texture.rs  two_triangles.rs
some_examples/: Cargo.toml  README.md
some_examples/src/: README.md  basic.rs  curves.rs  debug_visualizator.rs  eikonal.rs  fast_marching_method.rs  fmm.rs  fmm_app.rs  hilbert.rs  mc.rs  mc_terrain.rs  test.rs  visualizer.rs
