[package]
name = "jaankaup_core"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2021"

[lib]

[features]
input_debug = []
gpu_debug = []
texture_debug = []

[dependencies]

wgpu = { git = "https://github.com/gfx-rs/wgpu", rev="90eb399d4344a73ed723a9a4ab0249fde7bfa3c7" }
#wgpu = { git = "https://github.com/gfx-rs/wgpu", rev="7d138e2e76c0d9bf1f1e573dbafb041bd533e76a" }

winit = { version = "0.27" }
cgmath = "0.18"
log = "0.4"
wavefront_obj = "10.0.0"
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
png = "0.16"
bytemuck = { version = "1.4", features = ["derive"] }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu]
#[dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "a420e453c3d9c93dfb1a8526bf11c000d895c916"
#
#[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "191537021e6f7504beee9961c16b3245b72e194b"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

futures-intrusive = "0.4"
async-executor = "1.0"
pollster = "0.2"
simple_logger = "1.16.0"
#env_logger = "0.8.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]

getrandom = { version = "0.2.7", features = ["js"] }
web-sys = "0.3.60"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
# web-sys = "0.3.58"
# js-sys = "0.3.58"
# wasm-bindgen = "0.2.81"
# wasm-bindgen-futures = "0.4.31"
wasm-timer = "0.2.5"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
