[package]
name = "some_examples"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

[dependencies]
jaankaup_core = { path = "../jaankaup_core" }
jaankaup_models = { path = "../assets/models" }
bytemuck = { version = "1.4", features = ["derive"] }

[[example]]
name = "basic"
path = "src/basic.rs"

[[example]]
name = "common_functions"
path = "src/misc_functions.rs"

[[example]]
name = "hilbert"
path = "src/hilbert.rs"
