[package]
name = "some_examples"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

[dependencies]
jaankaup_core = { path = "../jaankaup_core" }
jaankaup_models = { path = "../assets/models" }
jaankaup_algorithms = { path = "../algorithms" }
bytemuck = { version = "1.4", features = ["derive"] }

[[example]]
name = "basic"
path = "src/basic.rs"

[[example]]
name = "mc"
path = "src/mc.rs"

[[example]]
name = "curves"
path = "src/curves.rs"

[[example]]
name = "visualizer"
path = "src/visualizer.rs"

[[example]]
name = "fmm"
path = "src/fmm.rs"

[[example]]
name = "mc_terrain"
path = "src/mc_terrain.rs"

[[example]]
name = "fast_marching_method"
path = "src/fast_marching_method.rs"

[[example]]
name = "domain_tester"
path = "src/test.rs"
