[package]
name = "some_examples"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2021"

[features]
gpu_debug = ["jaankaup_core/gpu_debug"]

[dependencies]
jaankaup_core = { path = "../jaankaup_core" }
jaankaup_models = { path = "../assets/models" }
jaankaup_algorithms = { path = "../algorithms" }
bytemuck = { version = "1.4", features = ["derive"] }
itertools = { version = "0.8.2" }
rand = { version = "0.8.5"} 

[[example]]
name = "basic"
path = "src/basic.rs"

[[example]]
name = "mc"
path = "src/mc.rs"

[[example]]
name = "curves"
path = "src/curves.rs"

[[example]]
name = "visualizer"
path = "src/visualizer.rs"

[[example]]
name = "fmm"
path = "src/fmm.rs"

[[example]]
name = "mc_terrain"
path = "src/mc_terrain.rs"

[[example]]
name = "fmm_app"
path = "src/fmm_app.rs"

[[example]]
name = "test"
path = "src/test.rs"
